--- a/new.html
+++ b/new.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/notes.css" type="text/css" media="all">
 </head>
 <body>
-    <div class="edit">
+<div class="edit" id="editor">
     <div class="row">
         <label for="title">Titel</label>
         <input class="text" type="text" id="title">
@@ -16,13 +16,12 @@
         <textarea name="description" id="description" rows="10" cols="30"></textarea>
     </div>
     <div class="row">
-            <label>Wichtigkeit</label>
-            <input class="radio" id="prio1" type="radio" name="priority" value="1"><label class="radio" for="prio1">1</label>
-            <input class="radio" id="prio2" type="radio" name="priority" value="2"><label class="radio" for="prio2">2</label>
-            <input class="radio" id="prio3" type="radio" name="priority" value="3" checked><label class="radio" for="prio3">3</label>
-            <input class="radio" id="prio4" type="radio" name="priority" value="4"><label class="radio" for="prio4">4</label>
-            <input class="radio" id="prio5" type="radio" name="priority" value="5"><label class="radio" for="prio5">5</label>
-
+        <label>Wichtigkeit</label>
+        <input class="radio" id="prio1" type="radio" name="priority" value="1"><label class="radio" for="prio1">1</label>
+        <input class="radio" id="prio2" type="radio" name="priority" value="2"><label class="radio" for="prio2">2</label>
+        <input class="radio" id="prio3" type="radio" name="priority" value="3" checked><label class="radio" for="prio3">3</label>
+        <input class="radio" id="prio4" type="radio" name="priority" value="4"><label class="radio" for="prio4">4</label>
+        <input class="radio" id="prio5" type="radio" name="priority" value="5"><label class="radio" for="prio5">5</label>
     </div>
     <div class="row">
         <label for="duedate">Erledigt bis</label>
@@ -34,9 +33,9 @@
     </div>
     <div class="row">
         <button class="button" onclick="goto('index.html');">Zurück zur Übersicht</button>
-
     </div>
-    </div>
+</div>
+<script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/notes.js"></script>
 </body>
 </html>
