code refactoring with @uenala: final data structure, code cleanup (WIP), sorting implemented (issue #4, #5, #6)

--- a/edit.html
+++ b/edit.html
@@ -28,8 +28,8 @@
         <input type="date" id="duedate">
     </div>
     <div class="row">
-        <label for="finished">Erledigt</label>
-        <input type="checkbox" id="finished" name="finished">
+        <label for="isFinished">Erledigt</label>
+        <input type="checkbox" id="isFinished" name="isFinished">
     </div>
     <div class="row">
         <button onclick="updateNote()">Speichern</button>
