Issue #9: merge edit and new into update.html.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <div class="row">
-    <button onclick="goto('new.html')">Neue Notiz erstellen</button>
+    <button onclick="newNote()">Neue Notiz erstellen</button>
     <select onchange="changeSkin()" id="skins" name="Skins">
         <option value="skin-default">Skin Default</option>
         <option value="skin-grey">Skin Grey</option>
