--- a/update.html
+++ b/update.html
@@ -36,15 +36,15 @@
         <input type="checkbox" id="isFinished" name="isFinished"/>
     </div>
     <div class="row">
-        <button onclick="updateNote()">Speichern</button>
+        <button onclick="Notes.updateNote()">Speichern</button>
     </div>
     <div class="row">
         <button onclick="goto('index.html');">Zurück zur Übersicht</button>
     </div>
     <div class="row">
-        <button onclick="deleteNode()">Notiz löschen</button>
+        <button onclick="Notes.deleteNote()">Notiz löschen</button>
     </div>
 </div>
-<script type="text/javascript">getNoteValuesByNoteKeyParameter();</script>
+<script type="text/javascript">Notes.getNoteValuesByNoteKeyParameter();</script>
 </body>
 </html>
