--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
 <div class="row" id="toolbar">
     <button data-action="new-note">Neue Notiz erstellen</button>
     <select onchange="changeSkin()" id="skins" name="Skins">
-        <option value="skin-default">Skin Default</option>
+        <option value="skin-default">Skin Default (funktional)</option>
         <option value="skin-grey">Skin Grey</option>
         <option value="skin-green">Skin Green</option>
     </select>
@@ -23,7 +23,7 @@
 <div class="row sorting" id="sorting">
     <span>Sortieren nach:</span>
     <button data-sort="finished">Erledigt Datum</button>
-    <button data-sort="created">Erstellt Datum</button>
+    <button class="active" data-sort="created">Erstellt Datum</button>
     <button data-sort="priority">Wichtigkeit</button>
 </div>
 <div class="row filter" id="filter">
