input field type "date" replaced with "datetime-local" (issue #16)

--- a/static/update.html
+++ b/static/update.html
@@ -37,7 +37,7 @@
         </div>
         <div class="row">
             <label for="duedate">Erledigt bis</label>
-            <input type="date" id="duedate" value="{{duedate}}" placeholder="dd/MM/yyyy"/>
+            <input type="datetime-local" id="duedate" value="{{duedate}}"/>
         </div>
         {{#if created}}
         <div class="row">
