input field type "date" replaced with "datetime-local" (issue #16), html lang="de"

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head lang="de">
     <meta charset="UTF-8">
     <title>Meine Notizen</title>
     <link rel="stylesheet" href="css/notes.css" type="text/css" media="all">
@@ -48,7 +48,7 @@
                     <label for="isFinished">Abgeschlossen{{#if isFinished}} {{prettyDateFormat finished}}{{/if}}</label>
                 </div>
                 <div class="description">
-                    {{{formatText description}}}<a class="more" href="#">Mehr anzeigen</a><a class="less" href="#">Weniger anzeigen</a>
+                    {{{formatText description}}}<a class="more" href="#">Mehr anzeigen</a>&nbsp;<a class="less" href="#">Weniger anzeigen</a>
                 </div>
                 <div class="edit">
                     <button data-action="edit-note">Notiz bearbeiten</button>
