--- a/static/update.html
+++ b/static/update.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head lang="de">
     <meta charset="UTF-8">
     <title> Notiz update</title>
     <link rel="stylesheet" href="css/notes.css" type="text/css" media="all">
